[package]
name = "cleancode"
version = "0.1.0"
edition = "2021"
description = "A multi-language scanner that detects unused function definitions in source code"
authors = []

[[bin]]
name = "cleancode"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"
thiserror = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
